--- a/ChickenBroth/ChickenBroth.vcxproj
+++ b/ChickenBroth/ChickenBroth.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>cbpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CB_PLATFORM_WINDOWS;CB_BUILD_DLL;GLFW_INCLUDE_NONE;CB_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -98,7 +98,7 @@
       <PrecompiledHeaderFile>cbpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CB_PLATFORM_WINDOWS;CB_BUILD_DLL;GLFW_INCLUDE_NONE;CB_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeaderFile>cbpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CB_PLATFORM_WINDOWS;CB_BUILD_DLL;GLFW_INCLUDE_NONE;CB_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLAD\include;vendor\GLFW\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -146,6 +146,7 @@
     <ClInclude Include="src\ChickenBroth.h" />
     <ClInclude Include="src\ChickenBroth\Application.h" />
     <ClInclude Include="src\ChickenBroth\Core.h" />
+    <ClInclude Include="src\ChickenBroth\Core\Timestep.h" />
     <ClInclude Include="src\ChickenBroth\EntryPoint.h" />
     <ClInclude Include="src\ChickenBroth\Events\ApplicationEvent.h" />
     <ClInclude Include="src\ChickenBroth\Events\Event.h" />
@@ -161,16 +162,18 @@
     <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\RenderCommand.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\ChickenBroth\Renderer\RenderCommand.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Shader.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\Texture.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\VertexArray.h" />
     <ClInclude Include="src\ChickenBroth\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -591,10 +594,10 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
+    <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp" />
-    <ClCompile Include="src\ChickenBroth\Core\Timestep.h" />
     <ClCompile Include="src\ChickenBroth\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\ChickenBroth\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\ChickenBroth\Layer.cpp" />
@@ -602,21 +605,24 @@
     <ClCompile Include="src\ChickenBroth\Log.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\ChickenBroth\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Shader.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\Texture.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\cbpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
